--- a/atv1/index.html
+++ b/atv1/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <h1>Menu</h1>
-    <a href = "blog.html" target="_blank">Berna</a>
-    <a href = "blog.html" target="_blank">Amsterdã</a>
-    <a href = "blog.html" target="_blank">Egito</a>
-    <a href = "blog.html" target="_blank">Oslo</a>
-
+    <a href = "blog.html" target="_blank">Berna - Suiça</a><br>
+    <a href = "blog.html" target="_blank">Amsterdã - Países Baixos</a><br>
+    <a href = "blog.html" target="_blank">Reykjavik - Islândia</a><br>
+    <a href = "blog.html" target="_blank">Oslo - Noruega</a><br>
+    
 </body>
 
 </html>
