--- a/atv1/index.html
+++ b/atv1/index.html
@@ -13,7 +13,7 @@
 
     <h1>Menu</h1>
     <a href = "Berna.html" target="_blank">Berna - Suiça</a><br>
-    <a href = "blog.html" target="_blank">Amsterdã - Países Baixos</a><br>
+    <a href = "Amsterdã.html" target="_blank">Amsterdã - Países Baixos</a><br>
     <a href = "blog.html" target="_blank">Reykjavik - Islândia</a><br>
     <a href = "blog.html" target="_blank">Oslo - Noruega</a><br>
     
