--- a/atv1/index.html
+++ b/atv1/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <h1>Menu</h1>
-    <a href = "Berna.html" target="_blank">Berna - Suiça</a><br>
-    <a href = "Amsterdã.html" target="_blank">Amsterdã - Países Baixos</a><br>
-    <a href = "blog.html" target="_blank">Reykjavik - Islândia</a><br>
-    <a href = "blog.html" target="_blank">Oslo - Noruega</a><br>
+    <a href = "Berna.html">Berna - Suiça</a><br>
+    <a href = "Amsterdã.html">Amsterdã - Países Baixos</a><br>
+    <a href = "Reykjavik.html">Reykjavik - Islândia</a><br>
+    <a href = "Oslo.html">Oslo - Noruega</a><br>
     
 </body>
 
