--- a/atv1/index.html
+++ b/atv1/index.html
@@ -15,7 +15,7 @@
     <a href = "Berna.html">Berna - Suiça</a><br>
     <a href = "Amsterdã.html">Amsterdã - Países Baixos</a><br>
     <a href = "Reykjavik.html">Reykjavik - Islândia</a><br>
-    <a href = "Oslo.html">Oslo - Noruega</a><br>
+    <a href = "Oslo.html">Oslo - Noruega</a>
     
 </body>
 
