--- a/atv1/index.html
+++ b/atv1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=2, initial-scale=1.0">
-    <meta name="authors"  name = " Marina Moraes"> 
+    <meta name="author"  content = " Marina Moraes"> 
     <title>Blog</title>
 
 </head>
