--- a/atv1/Berna.html
+++ b/atv1/Berna.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1><strong>Berna</strong> </h1>
-    <h3><a href = "index.html" target="_blank">Menu</a><br></h3>
+    <h3><a href = "index.html">Menu</a><br></h3>
     <h2><strong>Sobre</strong></h2>
     <p>Berna é a capital da Suíça e fica no oeste do país, às margens do rio Aare. A cidade é um destino popular graças aos inúmeros pontos turísticos, especialmente o centro histórico, favorito entre turistas. Um passeio em Berna é acima de tudo: diverso e variado. Você pode primeiro visitar o Palácio Federal, centro da democracia suíça, que faz conjunto com a praça Bundesplatz e o Terraço Federal. Depois o passeio continua pelo centro histórico de Berna, com suas muitas arcadas. Quer mais? Então dê uma passadinha no parque dos ursos, o Bear Park. O caminho até lá já vale a pena: você vai atravessar o rio Aare sobre a imponente Ponte Nydegg com vista para o centro histórico e as montanhas.</p>
     <p>Em Berna há uma conexão única entre cidade, pontos turísticos e natureza. Ao fazer uma pausa no Jardim das Rosas, você também aproveita a vista fantástica do centro histórico. O Jardim Botânico também merece uma visita. Outro destaque natural: O azul turquesa do rio Aare. O rio que faz parte da vida em Berna é dica imperdível para visitantes e bons nadadores. Seja tomando um banho refrescante ou praticando o "Aareböötlen" (descer o Aare de barco inflável): O rio limpo é sinônimo de estilo de vida e diversão aquática.</p>
