--- a/atv1/Reykjavik.html
+++ b/atv1/Reykjavik.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1><strong>Amsterdã</strong> </h1>
-    <h3><a href = "index.html" target="_blank">Menu</a><br></h3>
+    <h3><a href = "index.html">Menu</a><br></h3>
     <h2><strong>Sobre</strong></h2>
     <p>Reykjavík, a capital da Islândia, é uma cidade vibrante e fascinante que combina paisagens naturais de tirar o fôlego com uma atmosfera cosmopolita. Sendo a capital mais ao norte do mundo, Reykjavík é um destino encantador para quem busca experiências únicas. De fontes termais a cultura riquíssima e vida noturna animada, a capital da Islândia surpreende os visitantes com sua diversidade e autenticidade.</p>
     <p>Uma das características mais marcantes de Reykjavík é sua proximidade com a natureza. Situada em meio a vulcões, montanhas e campos de lava, a cidade é um ponto de partida perfeito para explorar os fenômenos naturais da Islândia e descobrir o coração da Terra do Gelo e do  Fogo. Além disso, as famosas fontes termais geotérmicas da região, como a Blue Lagoon, oferecem banhos relaxantes ao ar livre.</p>
