--- a/atv1/Amsterdã.html
+++ b/atv1/Amsterdã.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1><strong>Amsterdã</strong> </h1>
-    <h3><a href = "index.html" target="_blank">Menu</a><br></h3>
+    <h3><a href = "index.html">Menu</a><br></h3>
     <h2><strong>Sobre</strong></h2>
     <p>Situada na província Holanda do Norte, a incomum Amsterdam não se limita só ao status de capital e maior cidade dos Países Baixos. Ela voa alto no cenário mundial, sendo hoje uma das potências comerciais e culturais mais importantes da Europa. A lendária metrópole dos canais fluviais e das casas flutuantes é cosmopolita e liberal por natrureza. É também a terra dos museus, das bicicletas, dos parques, das ruas de comércio, dos mercados de flores, dos concertos, dos festivais internacionais e dos aconchegantes cafés.</p>
     <p>Alguns dos melhores museus de artes e história da Europa encontram-se em Amsterdam. Seu roteiro cultural é eclético e dos mais completos entre as cidades europeias. Conta com 45 museus, diversos teatros, cinemas, dança, concertos (a orquestra sinfônica local é uma das melhores do mundo), sem contar a agitada vida noturna.</p>
