--- a/atv1/Oslo.html
+++ b/atv1/Oslo.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1><strong>Oslo</strong> </h1>
-    <h3><a href = "index.html" target="_blank">Menu</a><br></h3>
+    <h3><a href = "index.html">Menu</a><br></h3>
     <h2><strong>Sobre</strong></h2>
     <p>A capital da Noruega vai muito além do que se imagina e surpreende com sua mistura de natureza, arte e cultura urbana. Para ajudar a montar o seu roteiro, separamos o que fazer na cidade conforme o tempo disponível, além de conhecer algumas dicas extras.</p>
     <p>Oslo encanta tanto os amantes de história quanto quem procura contato com paisagens deslumbrantes. Seus museus, parques e construções modernas criam um cenário único. A cidade é acolhedora, organizada e cheia de possibilidades.</p>
