--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=2, initial-scale=1.0">
-    <meta name="authors"  name = " Marina Moraes"> 
-    <title>Blog</title>
-
+    <title>Marina Moraes Carvalho</title>
 </head>
-
 <body>
-
-    <h1> O Tesouro Perdido</h1>
-    <p>Um tesouro perdido há séculos foi encontrado na ilha de Cyberspace.
-        A expedição, liderada pela Dra. Ada Lovelace, encontrou artefatos que
-        revelam a história de um povo antigo.</p>
-
-    <p> Localização</p>
+    <h1>Meus websites e atividades</h1>
+    <h2>Marina Moraes Carvalho</h2>
     <ul>
-        <li> Monte Sintaxe, 12.</li>
+        <li><a href="blog/index.html">Exemplos</a></a></li>
+        <li><a href="atv1/index.html">Atividade 1</a></a></li>
+        <li><a href="atv2/">Atividade 2</a></a></li>
     </ul>
-    <p>Data:</p>
-    <ul>
-        <li> 25 de setembro.</li>
-    </ul>
-    <a href = "blog.html" target="_blank"> Leia mais sobre a descoberta em nosso blog.</a>
-
 </body>
-
-</html>
