--- a/atv2/index.html
+++ b/atv2/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
+    <center>
+    <h2>-- Tabela do Brasileirão --</h2>
     <div class=estilo>
         <table width="50%" border = "1">
-            <caption>Tabela do Brasileirão</caption>
             <thead>
                 <tr>
                     <th></th>
@@ -314,6 +315,7 @@
             </tbody>
         </table>
     </div>
+    </center>
 </body>
 
 </html>
