--- a/index.html
+++ b/index.html
@@ -2,58 +2,19 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-<<<<<<< HEAD
     <title>Marina Moraes Carvalho</title>
-=======
-    <meta name="viewport" content="width=2, initial-scale=1.0">
-    <meta name="authors"  name = " Marina Moraes"> 
-    <title>Blog</title>
-
->>>>>>> 9bce0786598f98561df3682dcc9610260a20e26a
-=======
-    <title>Marina Moraes Carvalho</title>
->>>>>>> b8c91155aedde0b78de0d81b5bf7637f75707e63
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marina Moraes">
 </head>
 <body>
-<<<<<<< HEAD
 
-<<<<<<< HEAD
     <h1>Meus websites e atividades</h1>
     <h2>Marina Moraes Carvalho</h2>
     <ul>
-        <li><a href="Exemplo/exemplos.html">Exemplos</a></li>
+        <li><a href="Blog/index.html">Exemplos</a></li>
         <li><a href="atv1/index.html">Atividade 1</a></li>
-        <li><a href="atv2">Atividade </a></li>
-        
-
-=======
-    <h1> O Tesouro Perdido</h1>
-    <p>Um tesouro perdido há séculos foi encontrado na ilha de Cyberspace.
-        A expedição, liderada pela Dra. Ada Lovelace, encontrou artefatos que
-        revelam a história de um povo antigo.</p>
-
-    <p> Localização</p>
-=======
-    <h1>Meus websites e atividades</h1>
-    <h2>Marina Moraes Carvalho</h2>
->>>>>>> b8c91155aedde0b78de0d81b5bf7637f75707e63
-    <ul>
-        <li><a href="blog/index.html">Exemplos</a></a></li>
-        <li><a href="atv1/index.html">Atividade 1</a></a></li>
-        <li><a href="atv2/">Atividade 2</a></a></li>
+        <li><a href="atv2/index.html">Atividade 2</a></li>
     </ul>
-<<<<<<< HEAD
-    <p>Data:</p>
-    <ul>
-        <li> 25 de setembro.</li>
-    </ul>
-    <a href = "blog.html" target="_blank"> Leia mais sobre a descoberta em nosso blog.</a>
 
 </body>
-
 </html>
->>>>>>> 9bce0786598f98561df3682dcc9610260a20e26a
-=======
-</body>
->>>>>>> b8c91155aedde0b78de0d81b5bf7637f75707e63
