--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="Blog/index.html">Exemplos</a></li>
         <li><a href="atv1/index.html">Atividade 1</a></li>
         <li><a href="atv2/index.html">Atividade 2</a></li>
+        <li><a href="atv3/index.html">Atividade 3</a></li>
     </ul>
 
 </body>
