--- a/index.html
+++ b/index.html
@@ -5,18 +5,73 @@
     <title>Marina Moraes Carvalho</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marina Moraes">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4ff; /* azul clarinho */
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+        .container {
+            background-color: white;
+            max-width: 400px;
+            margin: auto;
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #cdd9ff; /* borda suave */
+        }
+        h1, h2 {
+            text-align: center;
+            margin: 0;
+        }
+        h1 {
+            margin-bottom: 10px;
+            color: #2a365e;
+        }
+        h2 {
+            color: #6b78a7;
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            display: block;
+            text-decoration: none;
+            background-color: #aebdf7;
+            padding: 10px;
+            border-radius: 6px;
+            color: white;
+            text-align: center;
+            font-weight: bold;
+        }
+        a:hover {
+            background-color: #8e9de0;
+        }
+    </style>
+
 </head>
 <body>
 
-    <h1>Meus websites e atividades</h1>
-    <h2>Marina Moraes Carvalho</h2>
-    <ul>
-        <li><a href="Blog/index.html">Exemplos</a></li>
-        <li><a href="atv1/index.html">Atividade 1</a></li>
-        <li><a href="atv2/index.html">Atividade 2</a></li>
-        <li><a href="atv3/index.html">Atividade 3</a></li>
-        <li><a href="atv4/index.html">Atividade </a></li>
-    </ul>
+    <div class="container">
+        <h1>- ATIVIDADES -</h1>
+        <h2>Marina Moraes Carvalho</h2>
+
+        <ul>
+            <li><a href="Blog/index.html">Exemplos</a></li>
+            <li><a href="atv1/index.html">Atividade 1</a></li>
+            <li><a href="atv2/index.html">Atividade 2</a></li>
+            <li><a href="atv3/index.html">Atividade 3</a></li>
+            <li><a href="atv4/index.html">Atividade 4</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
