--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a href="atv2/index.html">Atividade 2</a></li>
             <li><a href="atv3/index.html">Atividade 3</a></li>
             <li><a href="atv4/index.html">Atividade 4</a></li>
+            <li><a href="Avaliação 1/index.html">Avaliação 1</a></li>
         </ul>
     </div>
 
