--- a/Avaliação 1/index.html
+++ b/Avaliação 1/index.html
@@ -79,7 +79,7 @@
         <div class="proximojogo">
             <div class="cardtopo">
                 <span class="linhavermelha"></span>
-                <h3 class="titulo">PROXIMO JOGO</h3>
+                <h3 class="titulo">PRÓXIMO JOGO</h3>
             </div>
 
             <div class="detalhesjogo">
@@ -94,15 +94,13 @@
                     <div class="timeunidade">
                         <img src="https://images.flamengo.com.br/public/images/escudos/1760470168.png"
                             alt="Logo Pinheiros" class="logoescudo">
-                        <p class="nometime">E.C.P.</p>
-                        <p class="nometime">S.P</p>
                     </div>
 
                     <img src="https://images.flamengo.com.br/public/images/escudos/1524865930.png" alt="Logo Flamengo"
                         class="logoescudo logoflamengo">
                 </div>
 
-                <p class="local">GINASIO HENRIQUE VILLABOIM</p>
+                <p class="local">GINÁSIO HENRIQUE VILLABOIM</p>
                 <p class="datahora">03/12 - 20:00</p>
             </div>
         </div>
@@ -110,7 +108,7 @@
         <div class="classificacao">
             <div class="cardtopo">
                 <span class="linhavermelha"></span>
-                <h3 class="titulo">CLASSIFICACAO</h3>
+                <h3 class="titulo">CLASSIFICAÇÃO</h3>
             </div>
 
             <p class="tituloliga">CAMPEONATO BRASILEIRO 2025</p>
@@ -172,8 +170,60 @@
             </table>
             <p class="linktabelacompleta">VEJA A TABELA COMPLETA</p>
         </div>
-
     </main>
+
+    <div class="imagens-2x2">
+
+        <div class="imagem-card">
+            <p class="esporte">BASQUETE</p>
+            <div class="imagem-container">
+                <span class="categoria">NOTÍCIA</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36927/1763920457.jpeg" alt="Imagem 1">
+            </div>
+            <div class="texto-card">
+                <h3>Título da notícia 1 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>Subtexto ou descrição da notícia 1</p>
+            </div>
+        </div>
+
+        <div class="imagem-card">
+            <p class="esporte">FUTEBOL</p>
+            <div class="imagem-container">
+                <span class="categoria">EVENTO</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36946/1764631963.jpg" alt="Imagem 2">
+            </div>
+            <div class="texto-card">
+                <h3>Título da notícia 2 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>Subtexto ou descrição da notícia 2</p>
+            </div>
+        </div>
+
+        <div class="imagem-card">
+            <p class="esporte">OLÍMPICOS</p>
+            <div class="imagem-container">
+                <span class="categoria">ENTREVISTA</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36926/1763916398.jpeg" alt="Imagem 3">
+            </div>
+            <div class="texto-card">
+                <h3>Título da notícia 3 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>Subtexto ou descrição da notícia 3</p>
+            </div>
+        </div>
+
+        <div class="imagem-card">
+            <p class="esporte">SÓCIO-TORCEDOR</p>
+            <div class="imagem-container">
+                <span class="categoria">LANÇAMENTO</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36937/1764166067.png" alt="Imagem 4">
+            </div>
+            <div class="texto-card">
+                <h3>Título da notícia 4 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>Subtexto ou descrição da notícia 4</p>
+            </div>
+        </div>
+
+    </div>
+
 
 
 </body>
