--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Marina Moraes Carvalho</title>
@@ -9,55 +10,82 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f4ff; /* azul clarinho */
+            background-image: url("https://i.pinimg.com/1200x/62/bc/47/62bc475075a4973ca9421973d0be16ba.jpg");
+            background-size: cover;
+            background-color: rgba(0,0,0,0.6);
+            background-blend-mode: darken;
             margin: 0;
             padding: 20px;
-            color: #333;
+            color: #D8A24A;
+            /* dourado quente harmonizado */
         }
+
         .container {
-            background-color: white;
+            background-color: rgba(26, 26, 26, 0.92);
+            /* preto suave com transparência */
             max-width: 400px;
             margin: auto;
             padding: 20px;
             border-radius: 10px;
-            border: 2px solid #cdd9ff; /* borda suave */
+            border: 2px solid #B33A3A;
+            /* vermelho queimado */
+            box-shadow: 0 0 12px #7A2020;
         }
-        h1, h2 {
+
+        h1,
+        h2 {
             text-align: center;
             margin: 0;
         }
+
         h1 {
             margin-bottom: 10px;
-            color: #2a365e;
+            color: #D8A24A;
+            /* dourado quente */
         }
+
         h2 {
-            color: #6b78a7;
+            color: #C68C36;
+            /* dourado escuro */
             font-size: 18px;
             margin-bottom: 20px;
         }
+
         ul {
             list-style: none;
             padding: 0;
         }
+
         li {
             margin-bottom: 10px;
         }
+
         a {
             display: block;
             text-decoration: none;
-            background-color: #aebdf7;
+            background-color: #B33A3A;
+            /* vermelho queimado */
             padding: 10px;
             border-radius: 6px;
-            color: white;
+            color: #fff;
             text-align: center;
             font-weight: bold;
+            border: 1px solid #7A2020;
+            transition: 0.2s;
         }
+
         a:hover {
-            background-color: #8e9de0;
+            background-color: #D8A24A;
+            /* dourado quente */
+            color: #1A1A1A;
+            /* grafite */
         }
     </style>
 
+
+
 </head>
+
 <body>
 
     <div class="container">
@@ -75,4 +103,5 @@
     </div>
 
 </body>
+
 </html>
