--- a/Avaliação 1/index.html
+++ b/Avaliação 1/index.html
@@ -181,8 +181,8 @@
                 <img src="https://images.flamengo.com.br/public/images/artigos/36927/1763920457.jpeg" alt="Imagem 1">
             </div>
             <div class="texto-card">
-                <h3>Título da notícia 1 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>Subtexto ou descrição da notícia 1</p>
+                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>cop texto</p>
             </div>
         </div>
 
@@ -193,8 +193,8 @@
                 <img src="https://images.flamengo.com.br/public/images/artigos/36946/1764631963.jpg" alt="Imagem 2">
             </div>
             <div class="texto-card">
-                <h3>Título da notícia 2 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>Subtexto ou descrição da notícia 2</p>
+                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>cop texto</p>
             </div>
         </div>
 
@@ -205,8 +205,8 @@
                 <img src="https://images.flamengo.com.br/public/images/artigos/36926/1763916398.jpeg" alt="Imagem 3">
             </div>
             <div class="texto-card">
-                <h3>Título da notícia 3 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>Subtexto ou descrição da notícia 3</p>
+                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>cop texto</p>
             </div>
         </div>
 
@@ -217,8 +217,8 @@
                 <img src="https://images.flamengo.com.br/public/images/artigos/36937/1764166067.png" alt="Imagem 4">
             </div>
             <div class="texto-card">
-                <h3>Título da notícia 4 <span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>Subtexto ou descrição da notícia 4</p>
+                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
+                <p>cop texto</p>
             </div>
         </div>
 
