--- a/atv2/index.html
+++ b/atv2/index.html
@@ -5,12 +5,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela do Brasileirão - 2025</title>
+
+    <style>
+        body {
+            background: #f5f5f5;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            color: #222;
+            text-align: center;
+        }
+
+
+        h2 {
+            font-size: 2rem;
+            font-weight: 700;
+            color: #1a3e2a;
+            margin-bottom: 25px;
+        }
+
+
+        .estilo table {
+            width: 55%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            background: white;
+            border-radius: 10px;
+            overflow: hidden;
+            border: 1px solid #cdd5d0;
+        }
+
+
+        thead th {
+            background: #1a3e2a;
+            color: white;
+            padding: 10px;
+            font-size: 14px;
+            font-weight: 600;
+        }
+
+
+        tbody tr:nth-child(odd) {
+            background: #f0f3f1;
+        }
+
+
+        tbody tr:nth-child(even) {
+            background: white;
+        }
+
+
+        tbody tr:hover {
+            background: #e3eee7;
+        }
+
+
+        td {
+            padding: 8px;
+            font-size: 14px;
+            border-bottom: 1px solid #d9e1dc;
+        }
+
+
+        td img {
+            width: 22px;
+        }
+
+
+        td:last-child {
+            letter-spacing: 2px;
+            font-weight: 600;
+        }
+    </style>
+
+
 </head>
 
 <body>
     <h2>-- Tabela do Brasileirão --</h2>
     <div class=estilo>
-        <table width="45%" border = "1">
+        <table width="45%" border="1">
             <thead>
                 <tr>
                     <th></th>
@@ -29,7 +102,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/7spurne-xDt2p6C0imYYNA_48x48.png" alt="Escudo do Palmeiras" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/7spurne-xDt2p6C0imYYNA_48x48.png"
+                            alt="Escudo do Palmeiras" width="20"></td>
                     <td>1</td>
                     <td>Pameiras</td>
                     <td>61</td>
@@ -43,7 +117,8 @@
                     <td>x ✓ ✓ ✓ ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/orE554NToSkH6nuwofe7Yg_48x48.png" alt="Escudo do Flamengo" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/orE554NToSkH6nuwofe7Yg_48x48.png"
+                            alt="Escudo do Flamengo" width="20"></td>
                     <td>2</td>
                     <td>Flamengo</td>
                     <td>58</td>
@@ -57,7 +132,8 @@
                     <td>- ✓ - x ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Tcv9X__nIh-6wFNJPMwIXQ_48x48.png" alt="Escudo do Cruzeiro" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Tcv9X__nIh-6wFNJPMwIXQ_48x48.png"
+                            alt="Escudo do Cruzeiro" width="20"></td>
                     <td>3</td>
                     <td>Cruzeiro</td>
                     <td>53</td>
@@ -71,7 +147,8 @@
                     <td>✓ x - - -</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/5J3JY7fcdiDYU5rbPW7AKA_48x48.png" alt="Escudo do Mirassol" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/5J3JY7fcdiDYU5rbPW7AKA_48x48.png"
+                            alt="Escudo do Mirassol" width="20"></td>
                     <td>4</td>
                     <td>Mirasol</td>
                     <td>49</td>
@@ -85,7 +162,8 @@
                     <td>x - x ✓ ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/KLDWYp-H8CAOT9H_JgizRg_48x48.png" alt="Escudo do Botafogo" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/KLDWYp-H8CAOT9H_JgizRg_48x48.png"
+                            alt="Escudo do Botafogo" width="20"></td>
                     <td>5</td>
                     <td>Botafogo</td>
                     <td>43</td>
@@ -99,7 +177,8 @@
                     <td>- x ✓ x x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/nIdbR6qIUDyZUBO9vojSPw_48x48.png" alt="Escudo do Bahia" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/nIdbR6qIUDyZUBO9vojSPw_48x48.png"
+                            alt="Escudo do Bahia" width="20"></td>
                     <td>6</td>
                     <td>Bahia</td>
                     <td>43</td>
@@ -113,7 +192,8 @@
                     <td>x ✓ x ✓ x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/fCMxMMDF2AZPU7LzYKSlig_48x48.png" alt="Escudo do Fluminense" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/fCMxMMDF2AZPU7LzYKSlig_48x48.png"
+                            alt="Escudo do Fluminense" width="20"></td>
                     <td>7</td>
                     <td>Fluminense</td>
                     <td>41</td>
@@ -127,7 +207,8 @@
                     <td>✓ - ✓ x ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/4w2Z97Hf9CSOqICK3a8AxQ_48x48.png" alt="Escudo do São Paulo" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/4w2Z97Hf9CSOqICK3a8AxQ_48x48.png"
+                            alt="Escudo do São Paulo" width="20"></td>
                     <td>8</td>
                     <td>São Paulo</td>
                     <td>38</td>
@@ -141,7 +222,8 @@
                     <td>x x ✓ x x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/hHwT8LwRmYCAGxQ-STLxYA_48x48.png" alt="Escudo do Vasco da Gama" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/hHwT8LwRmYCAGxQ-STLxYA_48x48.png"
+                            alt="Escudo do Vasco da Gama" width="20"></td>
                     <td>9</td>
                     <td>Vasco da Gama</td>
                     <td>36</td>
@@ -155,7 +237,8 @@
                     <td>x - - ✓ ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/lMyw2zn1Z4cdkaxKJWnsQw_48x48.png" alt="Escudo do Bragantino" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/lMyw2zn1Z4cdkaxKJWnsQw_48x48.png"
+                            alt="Escudo do Bragantino" width="20"></td>
                     <td>10</td>
                     <td>Bragantino</td>
                     <td>36</td>
@@ -169,7 +252,8 @@
                     <td>- ✓ x ✓ x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Ku-73v_TW9kpex-IEGb0ZA_48x48.png" alt="Escudo do Grêmio" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Ku-73v_TW9kpex-IEGb0ZA_48x48.png"
+                            alt="Escudo do Grêmio" width="20"></td>
                     <td>11</td>
                     <td>Grêmio</td>
                     <td>36</td>
@@ -183,7 +267,8 @@
                     <td>✓ ✓ x ✓ ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/mSl0cz3i2t8uv4zcprobOg_48x48.png" alt="Escudo do Ceará SC" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/mSl0cz3i2t8uv4zcprobOg_48x48.png"
+                            alt="Escudo do Ceará SC" width="20"></td>
                     <td>12</td>
                     <td>Ceará SC</td>
                     <td>35</td>
@@ -197,7 +282,8 @@
                     <td>x x - ✓ -</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/tCMSqgXVHROpdCpQhzTo1g_48x48.png" alt="Escudo do Corinthians" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/tCMSqgXVHROpdCpQhzTo1g_48x48.png"
+                            alt="Escudo do Corinthians" width="20"></td>
                     <td>13</td>
                     <td>Corinthians</td>
                     <td>33</td>
@@ -211,7 +297,8 @@
                     <td>- ✓ - x x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/q9fhEsgpuyRq58OgmSndcQ_48x48.png" alt="Escudo do Atlético-MG" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/q9fhEsgpuyRq58OgmSndcQ_48x48.png"
+                            alt="Escudo do Atlético-MG" width="20"></td>
                     <td>14</td>
                     <td>Atlético-MG</td>
                     <td>33</td>
@@ -225,7 +312,8 @@
                     <td>✓ - x ✓ -</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/OWVFKuHrQuf4q2Wk0hEmSA_48x48.png" alt="Escudo do Internacional" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/OWVFKuHrQuf4q2Wk0hEmSA_48x48.png"
+                            alt="Escudo do Internacional" width="20"></td>
                     <td>15</td>
                     <td>Internacional</td>
                     <td>32</td>
@@ -239,7 +327,8 @@
                     <td>x - - ✓ x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/VHdNOT6wWOw_vJ38GMjMzg_48x48.png" alt="Escudo do Santos" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/VHdNOT6wWOw_vJ38GMjMzg_48x48.png"
+                            alt="Escudo do Santos" width="20"></td>
                     <td>16</td>
                     <td>Santos</td>
                     <td>31</td>
@@ -253,7 +342,8 @@
                     <td>✓ - - x ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/LHSM6VchpkI4NIptoSTHOg_48x48.png" alt="Escudo do EC Vitória" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/LHSM6VchpkI4NIptoSTHOg_48x48.png"
+                            alt="Escudo do EC Vitória" width="20"></td>
                     <td>17</td>
                     <td>EC Vitória</td>
                     <td>28</td>
@@ -267,7 +357,8 @@
                     <td>x x ✓ x ✓</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/me10ephzRxdj45zVq1Risg_48x48.png" alt="Escudo do Fortaleza" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/me10ephzRxdj45zVq1Risg_48x48.png"
+                            alt="Escudo do Fortaleza" width="20"></td>
                     <td>18</td>
                     <td>Fortaleza</td>
                     <td>24</td>
@@ -281,7 +372,8 @@
                     <td>x ✓ x ✓ x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/JrXw-m4Dov0gE2Sh6XJQMQ_48x48.png" alt="Escudo do Juventude" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/JrXw-m4Dov0gE2Sh6XJQMQ_48x48.png"
+                            alt="Escudo do Juventude" width="20"></td>
                     <td>19</td>
                     <td>Juventude</td>
                     <td>23</td>
@@ -295,9 +387,10 @@
                     <td>- - x x x</td>
                 </tr>
                 <tr>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/u9Ydy0qt6JJjWhTaI6r10A_48x48.png" alt="Escudo do Sport" width="20"></td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/u9Ydy0qt6JJjWhTaI6r10A_48x48.png"
+                            alt="Escudo do Sport" width="20"></td>
 
-                    
+
                     <td>20</td>
                     <td>Sport</td>
                     <td>17</td>
